--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,6 @@
 
     <!-- Soft UI Design System -->
     <link
-      type="text/css"
       href="~soft-ui-design-system/assets/css/soft-design-system-pro.min.css"
       rel="stylesheet"
     />
@@ -79,7 +78,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!--   Core JS Files   -->
+      Core JS Files  
     <script
       src="~soft-ui-design-system/assets/js/core/popper.min.js"
       type="text/javascript"
