added card component and scroll reveal

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 
     <!-- Favicon -->
     <link
@@ -78,7 +79,7 @@
       crossorigin="anonymous"
     ></script>
 
-      Core JS Files  
+    <!-- Core JS Files   -->
     <script
       src="~soft-ui-design-system/assets/js/core/popper.min.js"
       type="text/javascript"
