--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <script src="node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="/node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 
     <!-- Favicon -->
     <link
-      href="~soft-ui-design-system/assets/img/brand/favicon.png"
+      href="/src/assets/img/brand/favicon.png"
       rel="icon"
       type="image/png"
     />
@@ -26,7 +26,7 @@
 
     <!-- Icons -->
     <link
-      href="~soft-ui-design-system/assets/css/nucleo-icons.css"
+      src="~soft-ui-design-system/assets/css/nucleo-icons.css"
       rel="stylesheet"
     />
     <script
@@ -43,7 +43,7 @@
 
     <!-- Soft UI Design System -->
     <link
-      href="~soft-ui-design-system/assets/css/soft-design-system-pro.min.css"
+      src="~soft-ui-design-system/assets/css/soft-design-system-pro.min.css"
       rel="stylesheet"
     />
     <link
@@ -81,7 +81,7 @@
 
     <!-- Core JS Files   -->
     <script
-      src="~soft-ui-design-system/assets/js/core/popper.min.js"
+      src="/src/assets/js/core/popper.min.js"
       type="text/javascript"
     ></script>
     <script
