--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     />
 
     <!-- Icons -->
-   
+
     <script
       src="https://kit.fontawesome.com/42d5adcbca.js"
       crossorigin="anonymous"
@@ -118,5 +118,6 @@
         });
       });
     </script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
