--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <script src="/node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
-
-    <!-- Favicon -->
-    <link
-      href="/src/assets/img/brand/favicon.png"
-      rel="icon"
-      type="image/png"
-    />
-
-    <!-- Fonts -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
-
-    <!-- Icons -->
-
     <script
       src="https://kit.fontawesome.com/42d5adcbca.js"
       crossorigin="anonymous"
@@ -38,8 +26,6 @@
       crossorigin="anonymous"
     />
 
-    <!-- Soft UI Design System -->
-  
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -52,7 +38,7 @@
       integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../assets/style4.css" />
+    <link rel="stylesheet" href="assets/style4.css" />
   </head>
   <body>
     <app-root></app-root>
@@ -69,39 +55,27 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
     <script
-      src="/src/assets/js/core/popper.min.js"
+      src="assets/js/core/bootstrap.min.js"
       type="text/javascript"
     ></script>
     <script
-      src="~soft-ui-design-system/assets/js/core/bootstrap.min.js"
+      src="assets/js/plugins/perfect-scrollbar.min.js"
       type="text/javascript"
     ></script>
-    <script
-      src="~soft-ui-design-system/assets/js/plugins/perfect-scrollbar.min.js"
-      type="text/javascript"
-    ></script>
-    <script src="~soft-ui-design-system/assets/js/plugins/moment.min.js"></script>
+    <script src="assets/js/plugins/moment.min.js"></script>
 
-    <!-- Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="~soft-ui-design-system/assets/js/plugins/nouislider.min.js"></script>
-
-    <!--  Plugin for the Carousel, full documentation here: http://jedrzejchalubek.com/  -->
-    <script src="~soft-ui-design-system/assets/js/plugins/glidejs.min.js"></script>
-
-    <!--	Plugin for Select, full documentation here: https://joshuajohnson.co.uk/Choices/ -->
     <script
-      src="~soft-ui-design-system/assets/js/plugins/choices.min.js"
-      type="text/javascript"
-    ></script>
-
-    <!-- Control Center for Soft UI Design System: parallax effects, scripts for the example pages etc -->
-    <script
-      src="~soft-ui-design-system/assets/js/soft-design-system-pro.min.js"
+      src="assets/js/plugins/choices.min.js"
       type="text/javascript"
     ></script>
     <script
-      src="https://unpkg.com/soft-ui-design-system@1.0.3/assets/js/soft-design-system.min.js"
+      src="assets/js/soft-design-system.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      href="https://unpkg.com/soft-ui-design-system@1.0.3/assets/js/soft-design-system.min.js"
       type="text/javascript"
     ></script>
     <script type="text/javascript">
